--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -126,7 +126,7 @@ CONFIGURE_FILE( "${PROJECT_SOURCE_DIR}/megatron/megatron_config.h.in"
 
 
 set(CMAKE_CONFIGURATION_TYPES "Debug" CACHE STRING "" FORCE )
-add_definitions(  -D__WITH_ZLIB  -DUSE_JSONASSERT -DQT_NO_VERSION_TAGGING -DMUTEX_INSPECTOR_DEBUG -DDEBUG)
+add_definitions(  -D__WITH_ZLIB  -DUSE_JSONASSERT -DQT_NO_VERSION_TAGGING )
 #-DMUTEX_INSPECTOR_DEBUG -DDEBUG
 IF(DISABLE_UPNP)
 ENDIF()
